--- a/front-end/package.json
+++ b/front-end/package.json
@@ -31,6 +31,7 @@
         "@fullcalendar/interaction": "^6.1.13",
         "@fullcalendar/timegrid": "^6.1.13",
         "chart.js": "^3.3.2",
+        "moment": "^2.30.1",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
         "primeng": "17.2.0",
