--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -77,6 +77,19 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <!--        <dependency>-->
+        <!--            <groupId>com.fasterxml.jackson.core</groupId>-->
+        <!--            <artifactId>jackson-databind</artifactId>-->
+        <!--            <version>2.17.2</version>-->
+        <!--        </dependency>-->
+
+        <!--        <dependency>-->
+        <!--            <groupId>com.fasterxml.jackson.core</groupId>-->
+        <!--            <artifactId>jackson-core</artifactId>-->
+        <!--            <version>2.17.2</version>-->
+        <!--        </dependency>-->
+
     </dependencies>
 
     <build>
